--- a/football-manager/package.json
+++ b/football-manager/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
