--- a/football-manager/package.json
+++ b/football-manager/package.json
@@ -12,8 +12,10 @@
     "@material-tailwind/react": "^1.4.2",
     "@reduxjs/toolkit": "^1.9.3",
     "amazon-cognito-identity-js": "^6.1.2",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-select": "^5.7.0",
